脚本报错情况下，显示打卡

--- a/jquery-fed-oapage/index.html
+++ b/jquery-fed-oapage/index.html
@@ -1582,7 +1582,7 @@
 </head>
 
 <body>
-    <section id="aya_msg"></section>
+    <section id="aya_msg">JQUERY</section>
     <div id="app-container">
         <div class="app-container">
             <div class="banner-slider">
