--- a/vuecli-plateform/public/index.html
+++ b/vuecli-plateform/public/index.html
@@ -7,8 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
-    <link rel="icon" id="favicon" href="https://g.alicdn.com/dingding/web/0.2.6/img/oldIcon.ico" type="image/x-icon" />
-    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+    <!-- <link rel="icon" id="favicon" href="https://g.alicdn.com/dingding/web/0.2.6/img/oldIcon.ico" type="image/x-icon" /> -->
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vuecli-plateform</title>
     <style>
         body,
@@ -17,10 +17,6 @@
         p {
             margin: 0;
             padding: 0;
-        }
-
-        body {
-            background-color: #eee;
         }
     </style>
 
@@ -31,20 +27,19 @@
         <strong>We're sorry but vuecli-plateform doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="dingapp">非常兴奋这个页面能够缓存下来</div>
     <!-- built files will be auto injected -->
 
-    <script src="https://g.alicdn.com/??dingding/dingtalk-jsapi/2.3.0/dingtalk.open.js,dingding/promotion/0.5.0/js/lib/fastclick.js"
-        charset="utf-8"></script>
+    <!-- <script src="https://g.alicdn.com/??dingding/dingtalk-jsapi/2.3.0/dingtalk.open.js,dingding/promotion/0.5.0/js/lib/fastclick.js"></script> -->
+    <script charset="utf-8" src="<%= BASE_URL %>dingtalk.open-2.3.0.js"></script>
+    <script charset="utf-8" src="<%= BASE_URL %>fastclick.js"></script>
     <script>
         var ua = navigator.userAgent.toLowerCase();
         var isDing = ua.indexOf('dingtalk') > -1;
         var isAndroid = ua.indexOf('android') !== -1 || ua.indexOf('linux') > -1;
         new FastClick(document.body);
-        if (isDing) {
-            dd.ready(function () {
-                dd.ui.webViewBounce.disable();
-            });
+        if (isDing && dd) {
+            dd.ui.webViewBounce.disable();
         }
     </script>
 </body>
