--- a/vuecli-plateform/public/index.html
+++ b/vuecli-plateform/public/index.html
@@ -24,10 +24,11 @@
 
 <body>
     <noscript>
-        <strong>We're sorry but vuecli-plateform doesn't work properly without JavaScript enabled. Please enable it to
-            continue.</strong>
+        <strong>
+            We're sorry but it doesn't work properly without JavaScript enabled. Please enable it to continue.
+        </strong>
     </noscript>
-    <div id="dingapp">非常兴奋这个页面能够缓存下来</div>
+    <div id="dingapp">loading...</div>
     <!-- built files will be auto injected -->
 
     <!-- <script src="https://g.alicdn.com/??dingding/dingtalk-jsapi/2.3.0/dingtalk.open.js,dingding/promotion/0.5.0/js/lib/fastclick.js"></script> -->
