--- a/vue-oa-multiple/public/article.html
+++ b/vue-oa-multiple/public/article.html
@@ -37,7 +37,7 @@
         }
 
         .dd-weak-toast-img {
-            background: url(https://gw.alicdn.com/tfs/TB19BSTk_tYBeNjy1XdXXXXyVXa-48-48.png) no-repeat;
+            background: url("<%= BASE_URL %>ayas/TB19BSTk_tYBeNjy1XdXXXXyVXa-48-48.png") no-repeat;
             width: 48px;
             height: 48px;
             margin: 0 auto;
@@ -91,7 +91,7 @@
             </div>
         </div>
     </div>
-    <!-- <script charset="utf-8" src="<%= BASE_URL %>ayas/dingtalk.open-2.3.0.js"></script> -->
+    <script charset="utf-8" src="<%= BASE_URL %>ayas/dingtalk.open-2.3.0.js"></script>
     <script charset="utf-8" src="<%= BASE_URL %>ayas/fastclick.js"></script>
     <script>
         var ua = navigator.userAgent.toLowerCase();
