--- a/vue-oa-multiple/public/index.html
+++ b/vue-oa-multiple/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="index.manifest">
 
 <head>
     <meta charset="utf-8">
@@ -37,7 +37,7 @@
         }
 
         .dd-weak-toast-img {
-            background: url(https://gw.alicdn.com/tfs/TB19BSTk_tYBeNjy1XdXXXXyVXa-48-48.png) no-repeat;
+            background: url("<%= BASE_URL %>ayas/TB19BSTk_tYBeNjy1XdXXXXyVXa-48-48.png") no-repeat;
             width: 48px;
             height: 48px;
             margin: 0 auto;
