--- a/vue-oa-multiple/public/dispatch.html
+++ b/vue-oa-multiple/public/dispatch.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
-    <title>移动门户-发文信息</title>
+    <title>移动门户-发文列表</title>
     <style>
         body,
         div,
