--- a/vue-oa-multiple/public/article.html
+++ b/vue-oa-multiple/public/article.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
@@ -21,60 +22,6 @@
             background-color: #f6f6f6;
         }
     </style>
-    <style>
-        .dd-weak-toast-wrap {
-            position: fixed;
-            overflow: hidden;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            height: 100%;
-            outline: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .dd-weak-toast-img {
-            background: url("<%= BASE_URL %>ayas/TB19BSTk_tYBeNjy1XdXXXXyVXa-48-48.png") no-repeat;
-            width: 48px;
-            height: 48px;
-            margin: 0 auto;
-            -webkit-animation: roll 1500ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
-            animation: roll 1500ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
-        }
-
-        @keyframes roll {
-            0% {
-                transform: rotate(360deg)
-            }
-
-            100% {
-                transform: rotate(0deg)
-            }
-        }
-
-        @-webkit-keyframes roll {
-            0% {
-                transform: rotate(360deg)
-            }
-
-            100% {
-                transform: rotate(0deg)
-            }
-        }
-
-        @-moz-keyframes roll {
-            0% {
-                transform: rotate(360deg)
-            }
-
-            100% {
-                transform: rotate(0deg)
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -84,12 +31,110 @@
         </strong>
     </noscript>
     <div id="article">
-        <div class="dd-weak-toast-wrap">
-            <div>
-                <div class="dd-weak-toast-img"></div>
-                <div style="font-size: 14px; color:rgba(25,31,37,0.40);">加载中...</div>
+        <!--低能版SkeletonScreen-->
+        <!-- 我来组成头部 -->
+        <style>
+            .head {
+                padding: 5px;
+            }
+
+            .head_block {
+                position: relative;
+                margin: 5px 5px 10px 5px;
+                padding: 10px 10px;
+                min-height: 88px;
+                box-sizing: border-box;
+                border-radius: 5px;
+                background-color: rgba(235, 235, 235, 0.753);
+            }
+
+            [class^='head_block-'],
+            [class^='block-'] {
+                border-radius: 5px;
+                background-color: rgba(251, 250, 250, 0.722);
+            }
+
+            .head_block-title {
+                padding: 10px;
+                margin-top: 5px;
+                margin-bottom: 30px;
+            }
+
+            .head_block-asside {
+                position: relative;
+                margin-top: 1em;
+                min-height: 1em;
+                background-color: transparent;
+            }
+
+            .head_block-origin {
+                position: absolute;
+                bottom: 0;
+                width: 7em;
+                height: .8em;
+                display: inline-block;
+            }
+
+            .head_block-time {
+                position: absolute;
+                right: 5px;
+                bottom: 0;
+                width: 7em;
+                height: .8em;
+                display: inline-block;
+            }
+
+            [class^='block-'] {
+                display: inline-block;
+                height: 1em;
+                margin-bottom: 10px;
+            }
+
+            .block-8em {
+                width: 8em;
+            }
+
+            .block-12em {
+                width: 12em;
+            }
+
+            .block-16em {
+                width: 16em;
+            }
+
+            .block-22em {
+                width: 22em;
+            }
+        </style>
+        <section class="head">
+            <div class="head_block">
+                <p class="head_block-title"></p>
+                <aside class="head_block-asside">
+                    <span class="head_block-origin"></span>
+                    <span class="head_block-time"></span>
+                </aside>
+                <aside class="head_block-asside">
+                    <span class="head_block-origin"></span>
+                    <span class="head_block-time"></span>
+                </aside>
             </div>
-        </div>
+            <div class="head_block">
+                <p class="block-8em"> </p>
+                <p class="block-12em"> </p>
+                <p class="block-20em"> </p>
+                <p class="block-8em"> </p>
+                <p class="block-12em"> </p>
+                <p class="block-16em"> </p>
+                <p class="block-20em"> </p>
+                <p class="block-8em"> </p>
+                <p class="block-12em"> </p>
+                <p class="block-20em"> </p>
+                <p class="block-8em"> </p>
+                <p class="block-12em"> </p>
+                <p class="block-20em"> </p>
+            </div>
+        </section>
+        <!-- END SKELETON SCREEN -->
     </div>
     <script charset="utf-8" src="<%= BASE_URL %>ayas/dingtalk.open-2.3.0.js"></script>
     <script charset="utf-8" src="<%= BASE_URL %>ayas/fastclick.js"></script>
