--- a/vue-oa-multiple/public/index.html
+++ b/vue-oa-multiple/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="index.manifest">
+<html  manifest="index.manifest">
 
 <head>
     <meta charset="utf-8">
