--- a/jquery-fed-oapage/index.html
+++ b/jquery-fed-oapage/index.html
@@ -1611,7 +1611,7 @@
                             <div class="cell-box">
                                 <div>
                                     <div class="cell-image-container">
-                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=ding3b11247e3909339d35c2f4657eb6378f&agentid=213290791">
+                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=钉钉&agentid=钉钉">
                                             <img src="http://static.dingtalk.com/media/lALOcsYpu8zIzMg_200_200.png"
                                                 class="cell-image">
                                         </a>
@@ -1633,7 +1633,7 @@
                             <div class="cell-box">
                                 <div>
                                     <div class="cell-image-container">
-                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=ding3b11247e3909339d35c2f4657eb6378f&agentid=213290791">
+                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=钉钉&agentid=钉钉">
                                             <img src="http://static.dingtalk.com/media/lALOcsYpu8zIzMg_200_200.png"
                                                 class="cell-image">
                                         </a>
@@ -1646,7 +1646,7 @@
                             <div class="cell-box">
                                 <div>
                                     <div class="cell-image-container">
-                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=ding3b11247e3909339d35c2f4657eb6378f&agentid=214058278">
+                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=钉钉&agentid=钉钉">
                                             <img src="https://static.dingtalk.com/media/lALPDeC2tzmK5JDMgMyA_128_128.png"
                                                 class="cell-image">
                                         </a>
@@ -1815,7 +1815,7 @@
                             <div class="cell-box">
                                 <div>
                                     <div class="cell-image-container">
-                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=ding3b11247e3909339d35c2f4657eb6378f&agentid=213290791">
+                                        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=钉钉&agentid=钉钉">
                                             <img src="http://static.dingtalk.com/media/lALOcsYpu8zIzMg_200_200.png"
                                                 class="cell-image">
                                         </a>
