--- a/vue-fed-oapage/index.html
+++ b/vue-fed-oapage/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=ding3b11247e3909339d35c2f4657eb6378f&agentid=213290791">
+        <a href="dingtalk://dingtalkclient/action/switchtab?index=2&name=work&scene=1&corpid=钉钉&agentid=钉钉">
             <img src="http://static.dingtalk.com/media/lALOcsYpu8zIzMg_200_200.png"
                 class="cell-image">
         </a>
@@ -51,7 +51,7 @@
     <script>
             function dingsb(){
                 dd.biz.microApp.openApp({
-                agentId: '213290791',
+                agentId: '钉钉',
                 onSuccess: function(result) {},
                 onFail: function(err) {
                   alert("打开应用失败：" + JSON.stringify(err));
